# provider-sim

./: .gitignore  CLAUDE.md  README.md  __init__.py  generate_dummy_losses.py  pyproject.toml  setup_vm.sh
analysis/: plot_alpha_sweep.py  run_heatmap_analysis.py  simulation_report.md
docs/: PROVIDER_AP3_KG_Report_2026-03.md  about.md  autorl-program.md  kernkonzepte-architektur.txt  palaestrai-documentation.md  report-palaestrai-integration-im-provider-projekt.md  report-soja-lieferketten-szenario.md  s1-soja-kg-simulation-report.md  self-play-setup.md
docs/plans/: 2026-02-23-heatmap-analysis.md  2026-02-24-hybrid-defender-design.md  2026-02-24-hybrid-defender.md  (+5 more)
experiments/: ablation_train.py  analyze_all.py  analyze_enriched.py  analyze_icio_run.py  analyze_ppo_training.py  analyze_s5.py  analyze_s7.py  autorl_train.py  create_presentation.py  enrich_pdl_from_kg.py  evaluate_ppo.py  fix_gta_probabilities.py  generate_config.py  plot_training_curves.py  report_enriched.py  report_icio.py  run_ablation.sh  run_followup.sh  run_s1_kg_simulation.py  soja_arl_dummy.yaml  soja_arl_ppo.yaml  train_curriculum.py  train_ppo.py  visualize_all.py
provider_sim/: __init__.py
scenarios/: s1-soja.pdl.yaml  s1-soja_enriched.pdl.yaml  s1-soja_icio.pdl.yaml
tests/: conftest.py  test_ablation_features.py  test_condition.py  test_env_environment.py  test_integration.py  test_kg_shocks_adapter.py  test_objectives.py  test_pdl_parser.py  test_sim_engine.py  test_sim_state.py
tutorials/: provider_environment_tutorial.md  run_live_demo.py  run_provider_tutorial.py
(+39 files in other folders)
