[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "provider-sim"
version = "0.1.0"
description = "PDL parser and supply-chain simulation for the PROVIDER project"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
rl = ["palaestrai>=3.5.8"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
include = ["provider_sim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
